# Amorae

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  analysis.txt  analysis_utf8.txt  firestore.rules  pubspec.yaml  storage.rules
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: .env.example  DEPLOYMENT.md  DUCKDNS_SETUP.md  QUICK_COMMANDS.md  README.md  SSL_SETUP.md  pyproject.toml  quick-deploy.sh
backend/app/: main.py
backend/app/api/: __init__.py  chat.py  memory.py  privacy.py
backend/app/core/: __init__.py  auth.py  config.py  firebase.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  chat_service.py  llm_service.py  memory_service.py  persona_prompts.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  router.dart
lib/app/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart
lib/core/utils/: name_validator.dart
lib/features/auth/presentation/: login_screen.dart  splash_screen.dart
lib/shared/models/: custom_companion_model.dart  fact_model.dart  message_model.dart  models.dart  persona_model.dart  thread_model.dart  user_model.dart
lib/shared/providers/: providers.dart
lib/shared/services/: api_client.dart  auth_service.dart  firestore_service.dart  services.dart  storage_service.dart
lib/shared/widgets/: animated_text_field.dart  avatar_circle.dart  glass_card.dart  gradient_button.dart  loading_shimmer.dart  typing_indicator.dart  widgets.dart
test/: widget_test.dart
web/: index.html  manifest.json
(+10 files in other folders)
